# ginst

./: .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  Makefile  README.md  bump-version.sh  example.json  example.yaml  fti  fti.sh  install.sh  programms.json  programs.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: example.json  example.yaml
src/: app.rs  cli.rs  commands.rs  controller.rs  display.rs  distro.rs  executor.rs  lib.rs  main.rs  parser.rs  program.rs  programm.rs  types.rs  util.rs
src/display/: clo.rs  tui.rs
src/program/: configuration.rs  display.rs  installation.rs  instructionset.rs  steps.rs  util.rs
tools/: bump-version.sh  save_targets.sh
