[package]
name = "ginst"
version = "0.1.2"
edition = "2021"
description = "A generic installation tool, able to read and execute instructions from a json file."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
crossterm = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
tui = "0.19.0"
