[package]
name = "ginst"
version = "1.0.1"
edition = "2021"
description = "A generic installation tool, able to read and execute instructions from a json file."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
libginst = { git = "https://codeberg.org/Sebito/libginst.git" }
