[package]
name = "ginst"
version = "1.0.1"
edition = "2021"
description = "A generic installation tool, able to read and execute instructions from a self written config file."
homepage = "https://codeberg.org/Sebito/ginst"
repository = "https://codeberg.org/Sebito/ginst"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
libginst = "0.1.0"

[profile.release]
opt-level = "s"         # optimize for binary size
strip = "debuginfo"
